--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: "buildx"
 on:
   push:
     paths:
-      - 'src/**'
+      - "src/**"
 
 env:
   repository: ${{ github.repository }}
@@ -24,19 +24,12 @@ env:
 jobs:
   build-vue:
     runs-on: ubuntu-22.04
+    if: github.event.commits.*.modified.* matches 'src/vue/**'
     steps:
       # checkout source code
       - uses: actions/checkout@v2
-      # path filter
-      - uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            src:
-              - 'src/vue/**'
       # login docker registry
       - name: Login to Docker Registry
-        if: steps.changes.outputs.src == 'true'
         uses: docker/login-action@v1
         with:
           registry: ${{env.IMAGE_REGISTRY}}
@@ -44,7 +37,6 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       # build
       - name: build 1
-        if: steps.changes.outputs.src == 'true'
         shell: pwsh
         working-directory: ./build
         run: |
@@ -54,19 +46,12 @@ jobs:
 
   build-hostapi:
     runs-on: ubuntu-22.04
+    if: github.event.commits.*.modified.* matches 'src/hostapi/**'
     steps:
       # checkout source code
       - uses: actions/checkout@v2
-      # path filter
-      - uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            src:
-              - 'src/hostapi/**'
       # login docker registry
       - name: Login to Docker Registry
-        if: steps.changes.outputs.src == 'true'
         uses: docker/login-action@v1
         with:
           registry: ${{env.IMAGE_REGISTRY}}
@@ -74,7 +59,6 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       # build
       - name: build 1
-        if: steps.changes.outputs.src == 'true'
         shell: pwsh
         working-directory: ./build
         run: |
@@ -84,19 +68,12 @@ jobs:
 
   build-migrator:
     runs-on: ubuntu-22.04
+    if: github.event.commits.*.modified.* matches 'src/migrator/**'
     steps:
       # checkout source code
       - uses: actions/checkout@v2
-      # path filter
-      - uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            src:
-              - 'src/migrator/**'
       # login docker registry
       - name: Login to Docker Registry
-        if: steps.changes.outputs.src == 'true'
         uses: docker/login-action@v1
         with:
           registry: ${{env.IMAGE_REGISTRY}}
@@ -104,7 +81,6 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       # build
       - name: build 1
-        if: steps.changes.outputs.src == 'true'
         shell: pwsh
         working-directory: ./build
         run: |
@@ -114,8 +90,8 @@ jobs:
 
   build-complete:
     runs-on: ubuntu-22.04
-    if: ${{ always() }}
-    needs: [ build-hostapi, build-migrator, build-vue ]
+    if: success()
+    needs: [build-hostapi, build-migrator, build-vue]
     steps:
       # checkout source code
       - uses: actions/checkout@v2
@@ -125,3 +101,17 @@ jobs:
         working-directory: ./build
         run: |
           ./bot.ps1 -BotUrl $env:BOT -Msg 'Build Complete'
+
+  build-failure:
+    runs-on: ubuntu-22.04
+    if: failure()
+    needs: [build-hostapi, build-migrator, build-vue]
+    steps:
+      # checkout source code
+      - uses: actions/checkout@v2
+      # build
+      - name: build 1
+        shell: pwsh
+        working-directory: ./build
+        run: |
+          ./bot.ps1 -BotUrl $env:BOT -Msg 'Build Failure'
