--- a/src/ci-config.json
+++ b/src/ci-config.json
@@ -1,6 +1,7 @@
 {
-  "gitlabPipelineId": "7188",
+  "gitlabPipelineId": "7189",
   "branch": "dev-1.0",
-  "commit": "3cf5dc425e6c9a1bf192b42bab8a248c8e553aff",
-  "mode": "commit"
+  "commit": "50201bc30795bcf6972da40ce14f6dfbc3bf9e46",
+  "mode": "commit",
+  "creationTime": "2024-07-18 12:00:00"
 }
