--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
         id: changes
         with:
           filters: |
+            fengshenauth:
+              - 'src/fengshenauth/**'
             uniapp:
               - 'src/uni-app/**'
             vue:
