修改编译调整ci

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -169,7 +169,14 @@ jobs:
       always() &&
       !contains(needs.*.result, 'failure') &&
       !contains(needs.*.result, 'cancelled')
-    needs: [build-uniapp, build-vue, build-hostapi, build-migrator]
+    needs:
+      [
+        build-fengshenauth,
+        build-uniapp,
+        build-vue,
+        build-hostapi,
+        build-migrator,
+      ]
     steps:
       # checkout source code
       - uses: actions/checkout@v3
