--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,6 +114,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: repo-code
+          path: repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -133,6 +138,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: repo-code
+          path: repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -152,6 +162,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: repo-code
+          path: repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -171,6 +186,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: repo-code
+          path: repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
