--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: repo-code
-          path: repo-code
+          path: ./repo-code/
 
   build-fengshensyncjob:
     needs: changes
@@ -70,6 +70,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: repo-code
+          path: ./repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -78,9 +83,8 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./build
+        working-directory: ./repo-code/build
         run: |
-          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "fengshensyncjob" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.FengShenSyncJob/Dockerfile"
 
@@ -94,7 +98,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: repo-code
+          path: ./repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -118,7 +122,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: repo-code
+          path: ./repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -142,7 +146,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: repo-code
+          path: ./repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -166,7 +170,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: repo-code
+          path: ./repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -190,7 +194,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: repo-code
+          path: ./repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -246,3 +250,15 @@ jobs:
         working-directory: ./build
         run: |
           ./bot.ps1 -BotUrl $env:BOT -Msg 'Build Failure' -BuildSuccess $false
+
+  changes-failure:
+    runs-on: ubuntu-22.04
+    if: ${{ failure() }}
+    needs: changes
+    steps:
+      - uses: actions/checkout@v3
+      - name: build 1
+        shell: pwsh
+        working-directory: ./build
+        run: |
+          ./bot.ps1 -BotUrl $env:BOT -Msg 'Changes Failure' -BuildSuccess $false
