--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,7 @@ jobs:
           ./clone-target-repo.ps1
       - name: Upload directory as artifact
         uses: actions/upload-artifact@v4
+        working-directory: ./build
         with:
           name: repo-code
           path: ./repo-code/
