--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./repo-code
+          path: ./build/repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -83,8 +83,9 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./repo-code/build
+        working-directory: ./build
         run: |
+          ./set-env.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "fengshensyncjob" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.FengShenSyncJob/Dockerfile"
 
@@ -98,7 +99,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./repo-code
+          path: ./build/repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -107,8 +108,9 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./repo-code/build
+        working-directory: ./build
         run: |
+          ./set-env.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "fengshenauth" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.FengShenAuth/Dockerfile"
 
@@ -122,7 +124,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./repo-code
+          path: ./build/repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -131,8 +133,9 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./repo-code/build
+        working-directory: ./build
         run: |
+          ./set-env.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "vue" -ProjectName "uni-app" `
             -DockerfilePath "./src/uni-app/Dockerfile"
 
@@ -146,7 +149,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./repo-code
+          path: ./build/repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -155,8 +158,9 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./repo-code/build
+        working-directory: ./build
         run: |
+          ./set-env.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "vue" -ProjectName "vue" `
             -DockerfilePath "./src/vue/Dockerfile"
 
@@ -170,7 +174,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./repo-code
+          path: ./build/repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -179,8 +183,9 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./repo-code/build
+        working-directory: ./build
         run: |
+          ./set-env.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "hostapi" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.Web.Host/Dockerfile"
 
@@ -194,7 +199,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./repo-code
+          path: ./build/repo-code
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -203,8 +208,9 @@ jobs:
           password: ${{env.IMAGE_REGISTRY_PASSWORD}}
       - name: build 1
         shell: pwsh
-        working-directory: ./repo-code/build
+        working-directory: ./build
         run: |
+          ./set-env.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "migrator" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.Migrator/Dockerfile"
 
@@ -225,7 +231,7 @@ jobs:
       ]
     steps:
       - uses: actions/checkout@v3
-      - name: build 1
+      - name: notification
         shell: pwsh
         working-directory: ./build
         run: |
@@ -245,7 +251,7 @@ jobs:
       ]
     steps:
       - uses: actions/checkout@v3
-      - name: build 1
+      - name: notification
         shell: pwsh
         working-directory: ./build
         run: |
@@ -257,7 +263,7 @@ jobs:
     needs: changes
     steps:
       - uses: actions/checkout@v3
-      - name: build 1
+      - name: notification
         shell: pwsh
         working-directory: ./build
         run: |
