手动触发main: fde6473ef0228dbc89e91184de6144a51237f66e

--- a/src/ci-config.json
+++ b/src/ci-config.json
@@ -1,7 +1,7 @@
 {
-  "branch": "main-next",
-  "commit": "9e8e319d85da7291a04f45be1a6f164511fad4d0",
-  "gitlabPipelineId": "8737",
   "mode": "commit",
-  "creationTime": "2025-02-07 19:38:12"
+  "gitlabPipelineId": "8736",
+  "commit": "fde6473ef0228dbc89e91184de6144a51237f66e",
+  "branch": "main",
+  "creationTime": "2025-02-07 19:33:05"
 }
