--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./build/repo-code.zip
+          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -99,7 +99,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./build/repo-code.zip
+          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -124,7 +124,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./build/repo-code.zip
+          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -149,7 +149,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./build/repo-code.zip
+          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -174,7 +174,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./build/repo-code.zip
+          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -199,7 +199,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: repo-code
-          path: ./build/repo-code.zip
+          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
