--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,14 +55,7 @@ jobs:
         id: set-mode
         shell: pwsh
         working-directory: ./build
-        run: |
-          ./set-mode.ps1
-          ./clone-target-repo.ps1
-      - name: Upload Repo Code
-        uses: actions/upload-artifact@v4
-        with:
-          name: repo-code
-          path: ./build/repo-code.zip
+        run: ./set-mode.ps1
 
   build-fengshensyncjob:
     needs: changes
@@ -70,11 +63,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Download Repo Code
-        uses: actions/download-artifact@v4
-        with:
-          name: repo-code
-          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -85,7 +73,7 @@ jobs:
         shell: pwsh
         working-directory: ./build
         run: |
-          ./set-env.ps1
+          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "fengshensyncjob" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.FengShenSyncJob/Dockerfile"
 
@@ -95,11 +83,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Download Repo Code
-        uses: actions/download-artifact@v4
-        with:
-          name: repo-code
-          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -110,7 +93,7 @@ jobs:
         shell: pwsh
         working-directory: ./build
         run: |
-          ./set-env.ps1
+          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "fengshenauth" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.FengShenAuth/Dockerfile"
 
@@ -120,11 +103,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Download Repo Code
-        uses: actions/download-artifact@v4
-        with:
-          name: repo-code
-          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -135,7 +113,7 @@ jobs:
         shell: pwsh
         working-directory: ./build
         run: |
-          ./set-env.ps1
+          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "vue" -ProjectName "uni-app" `
             -DockerfilePath "./src/uni-app/Dockerfile"
 
@@ -145,11 +123,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Download Repo Code
-        uses: actions/download-artifact@v4
-        with:
-          name: repo-code
-          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -160,7 +133,7 @@ jobs:
         shell: pwsh
         working-directory: ./build
         run: |
-          ./set-env.ps1
+          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "vue" -ProjectName "vue" `
             -DockerfilePath "./src/vue/Dockerfile"
 
@@ -170,11 +143,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Download Repo Code
-        uses: actions/download-artifact@v4
-        with:
-          name: repo-code
-          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -185,7 +153,7 @@ jobs:
         shell: pwsh
         working-directory: ./build
         run: |
-          ./set-env.ps1
+          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "hostapi" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.Web.Host/Dockerfile"
 
@@ -195,11 +163,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Download Repo Code
-        uses: actions/download-artifact@v4
-        with:
-          name: repo-code
-          path: ./build
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
@@ -210,7 +173,7 @@ jobs:
         shell: pwsh
         working-directory: ./build
         run: |
-          ./set-env.ps1
+          ./clone-target-repo.ps1
           ./build.ps1 -ImageName "knightboss" -ProjectType "dotnet" -ProjectName "migrator" `
             -DockerfilePath "./src/aspnet-core/src/YoyoBoot.Template.Migrator/Dockerfile"
 
@@ -231,7 +194,7 @@ jobs:
       ]
     steps:
       - uses: actions/checkout@v3
-      - name: notification
+      - name: build 1
         shell: pwsh
         working-directory: ./build
         run: |
@@ -251,20 +214,8 @@ jobs:
       ]
     steps:
       - uses: actions/checkout@v3
-      - name: notification
+      - name: build 1
         shell: pwsh
         working-directory: ./build
         run: |
           ./bot.ps1 -BotUrl $env:BOT -Msg 'Build Failure' -BuildSuccess $false
-
-  changes-failure:
-    runs-on: ubuntu-22.04
-    if: ${{ failure() }}
-    needs: changes
-    steps:
-      - uses: actions/checkout@v3
-      - name: notification
-        shell: pwsh
-        working-directory: ./build
-        run: |
-          ./bot.ps1 -BotUrl $env:BOT -Msg 'Changes Failure' -BuildSuccess $false
